--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>samara feia</title>
+    <title>samara</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <h1>Bang Chan</h1> 
@@ -13,7 +14,7 @@
    <p><b>telefone:</b>(33)939393</p>
    <img width="200px"  src="https://i.pinimg.com/originals/8f/5f/09/8f5f09abc5af102762434a8f4b1204b7.jpg" alt="lindao">
    
-   <p>É um rapper, cantor, compositor e produtor musical australiano <br> de origem sul coreana, lindao, maravilhose e depois disso tudo ele ainda é um anão bombado kk.</p>
-   iukyjtfgd
+   <p>É um rapper, cantor, compositor e produtor musical australiano <br> de origem sul coreana, lindao, maravilhoso e depois disso tudo ele ainda é um anão bombado kk.</p>
+   
 </body>
 </html>
